--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
 	compile 'org.geotools:gt-geotiff:8.6'
 	compile 'org.geotools:gt-epsg-hsql:8.6'
+	compile 'org.geotools:gt-swing:8.6'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 
