--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,30 @@
+buildscript {
+    repositories {
+        ivy {
+            url 'http://dsweb:8080/ivy'
+        }
+    jcenter()
+    }
+    dependencies {
+        classpath 'lasp:publishing-plugin:1.2.0'
+        classpath 'lasp:environment-plugin:1.3.0'
+        classpath 'lasp:gitflow-plugin:1.7.0'
+        classpath 'lasp:utils-plugin:1.3.0'
+    }
+}
+
+apply plugin: 'lasp.publishing'
+apply plugin: 'lasp.environment'
+apply plugin: 'lasp.gitflow'
+apply plugin: 'lasp.utils'
 apply plugin: 'scala'
 
+lasp.utils.enableIncrementalCompilation(project)
+
 repositories {
+    ivy {
+        url "http://dsweb:8080/ivy"
+    }
     maven {
       url "http://download.osgeo.org/webdav/geotools/"
     }
@@ -11,7 +35,14 @@ repositories {
 }
 
 dependencies {
-    compile project(":latis")
+    lasp.environment {
+        dev {
+            compile project(":latis")
+        }
+        prod {
+            compile 'lasp:latis:2.21.0'
+        }
+    }
 
 	compile 'org.geotools:gt-geotiff:14.2'
 	compile 'org.geotools:gt-epsg-hsql:14.2'
@@ -19,6 +50,18 @@ dependencies {
 	compile 'org.geotools:gt-image:14.2'
 
     testCompile 'junit:junit:4.+'
+}
+
+publishing {
+    publications {
+        main(IvyPublication) {
+            organisation 'lasp'
+            module 'latis-netcdf'
+            revision gitflow.getVersion(project).toString()
+
+            from components.java
+        }
+    }
 }
 
 task wrapper(type: Wrapper) { gradleVersion = '2.12' }
