added mergeToMaster dependency on publishing and fixed renaming

--- a/build.gradle
+++ b/build.gradle
@@ -64,4 +64,8 @@ publishing {
     }
 }
 
+mergeToMaster {
+    dependsOn publishRemote
+}
+
 task wrapper(type: Wrapper) { gradleVersion = '2.12' }
