--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,5 @@
-#Tue Jul 12 11:39:20 MDT 2016
+#Tue Jul 12 11:43:40 MDT 2016
 major=1
 minor=0
-hotfix=0
-isSnapshot=false
+hotfix=1
+isSnapshot=true
