--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         ivy {
-            url 'http://dsweb/ivy'
+            url 'http://dsweb.lasp.colorado.edu/ivy'
         }
     jcenter()
     }
@@ -23,7 +23,7 @@ lasp.utils.enableIncrementalCompilation(project)
 
 repositories {
     ivy {
-        url "http://dsweb/ivy"
+        url "http://dsweb.lasp.colorado.edu/ivy"
     }
     maven {
       url "http://download.osgeo.org/webdav/geotools/"
